// @project        The CERN Tape Archive (CTA)
// @brief          Common types used by other protocol buffers
// @copyright      Copyright 2017 CERN
// @license        This program is free software: you can redistribute it and/or modify
//                 it under the terms of the GNU General Public License as published by
//                 the Free Software Foundation, either version 3 of the License, or
//                 (at your option) any later version.
//
//                 This program is distributed in the hope that it will be useful,
//                 but WITHOUT ANY WARRANTY; without even the implied warranty of
//                 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
//                 GNU General Public License for more details.
//
//                 You should have received a copy of the GNU General Public License
//                 along with this program.  If not, see <http://www.gnu.org/licenses/>.

syntax  = "proto3";
package cta.common;

//
// Common types
//

message Clock {
  uint64 sec                 = 1;       //< seconds of a clock
  uint64 nsec                = 2;       //< nanoseconds of a clock
}

message Checksum {
  string type                = 1;       //< checksum type
  string value               = 2;       //< checksum value
}

message Service {
  string name                = 1;       //< name of the service
  string url                 = 2;       //< access url of the service
}

message Id {
  uint64 uid                 = 1;       //< user identity number
  string username            = 2;       //< user name 
  uint64 gid                 = 3;       //< group identity number
  string groupname           = 4;       //< group name
}

message Security {
  string host                = 1;       //< client host 
  string app                 = 2;       //< app string
  string name                = 3;       //< security name
  string prot                = 4;       //< security protocol
  string grps                = 5;       //< security grps
}

message DiskFileInfo {
   string owner              = 1;       //< Owner of the disk file
   string group              = 2;       //< Group of the disk file
   string path               = 3;       //< Path of the disk file
}

message ArchiveFile {
   uint64 archive_id         = 1;       //< Archive File ID
   string disk_instance      = 2;       //< Disk instance
   string disk_id            = 3;       //< Disk file ID
   uint64 size               = 4;       //< File size
   Checksum cs               = 5;       //< Checksum
   string storage_class      = 6;       //< Storage Class
   DiskFileInfo df           = 7;       //< Disk File Info
   uint64 creation_time      = 8;       //< Creation Time
}

message TapeFile {
   string vid                = 1;       //< Volume ID of the tape on which the file has been written
   uint64 f_seq              = 2;       //< The position of the file on tape: File Sequence number
   uint64 block_id           = 3;       //< The position of the file on tape: Logical Block ID
}

